--- a/MajorProject/views/listings/show.ejs
+++ b/MajorProject/views/listings/show.ejs
@@ -4,7 +4,7 @@
     <h3>Listing details</h3>
   </div>
     <div class="card col-6 offset-3 show-card">
-    <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image"style="width: 100%; max-width: 300px; height: auto;>
+    <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image" style="width: 100%; max-width: 300px; height: auto;">
     <div class="card-body">
       <p class="card-text">
         <b><%= listing.title %></b><br/>
