--- a/MajorProject/public/css/style.css
+++ b/MajorProject/public/css/style.css
@@ -47,7 +47,7 @@ body{
     align-items: space-evenly;
 }
 /* cards */
-.card{
+.listing-card{
     border: none !important;
     margin-bottom: 2rem;
 }
@@ -92,7 +92,7 @@ show-img{
 }
 /* show page */
 .btns{
-    display: flex ;
+    display: flex;
 }
 .show-card{
     padding-left: 0;
